# bookbaker

./: .gitignore  README.md  pyproject.toml
bookbaker/: __init__.py  __main__.py  classes.py  config.py  misc.py  utils.py
bookbaker/roles/: __init__.py  autocrawler.py  base.py  deepl.py  epub.py  gemini.py  gpt.py  kakuyomu.py  novelup.py  syosetu_com.py  syosetu_org.py
